build/staging/arbimon/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arbimon
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arbimon
  template:
    metadata:
      labels:
        app: arbimon
    spec:
      serviceAccountName: batch-jobs-service-account
      containers:
        - name: arbimon
          image: 887044485231.dkr.ecr.eu-west-1.amazonaws.com/arbimon:latest
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /legacy-api/alive
              port: 3000
            initialDelaySeconds: 5
            timeoutSeconds: 2
            periodSeconds: 15
            successThreshold: 1
            failureThreshold: 1
          resources:
            requests:
              memory: '512Mi'
              cpu: '0.1'
