build/staging/arbimon/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/limit-rpm: "120"
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: bio-basic-auth-secrets
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
  name: arbimon-ingress
  namespace: staging
  labels:
    app: arbimon
spec:
  rules:
    - host: staging-arbimon.rfcx.org
      http:
        paths:
          - backend:
              serviceName: arbimon-service
              servicePort: 80
